--- a/Vinylsg12/settings.gradle
+++ b/Vinylsg12/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Vynils g12"
+rootProject.name = "Vinyls g12"
 include ':app'
