--- a/Vinylsg12/app/src/main/AndroidManifest.xml
+++ b/Vinylsg12/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Theme.VinylsG12"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".splash_screen_activity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/title_activity_splash_screen"
+            android:theme="@style/Theme.VinylsG12">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
