--- a/Vinylsg12/app/src/main/AndroidManifest.xml
+++ b/Vinylsg12/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.VinylsG12"
         tools:targetApi="31">
         <activity
-            android:name=".launch_screen_activity"
+            android:name=".log_in_activity"
+            android:exported="false" />
+        <activity
+            android:name=".sign_up_activity"
+            android:exported="false" />
+        <activity
+            android:name=".activityLaunchScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
