--- a/Vinylsg12/app/src/main/AndroidManifest.xml
+++ b/Vinylsg12/app/src/main/AndroidManifest.xml
@@ -15,12 +15,16 @@
         android:theme="@style/Theme.VinylsG12"
         tools:targetApi="31">
         <activity
+            android:name=".ui.about_us.AboutActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.album.AlbumActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
