feat: Add user session handling

--- a/Vinylsg12/app/src/main/AndroidManifest.xml
+++ b/Vinylsg12/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".ui.album.AlbumFormActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
