--- a/Vinylsg12/app/src/main/AndroidManifest.xml
+++ b/Vinylsg12/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.VinylsG12"
         tools:targetApi="31">
         <activity
+            android:name=".ui.collectors.collected_albums.CollectedAlbumsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_collected_albums"
+            android:theme="@style/Theme.VinylsG12" />
+        <activity
             android:name=".ui.album.AlbumFormActivity"
             android:exported="false" />
         <activity
