--- a/Vinylsg12/app/src/main/AndroidManifest.xml
+++ b/Vinylsg12/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.VinylsG12"
         tools:targetApi="31">
         <activity
+            android:name=".ui.prize.PrizeFormActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.prizes.PrizesActivity"
             android:exported="false" />
         <activity
